--- a/index.html
+++ b/index.html
@@ -553,10 +553,17 @@
                             <h3 class="text-xl font-bold text-light mt-1">BTS SIO - Option SISR</h3>
                             <p class="text-emerald/60 text-sm mt-1">Lycée Fulbert - Chartres</p>
                             <p class="text-light text-sm mt-2">Solutions d'Infrastructure, Systèmes et Réseaux</p>
-                            <div class="mt-3 flex flex-wrap gap-2 justify-end">
-                                <span class="badge text-xs px-2 py-1 rounded">Windows Server</span>
-                                <span class="badge text-xs px-2 py-1 rounded">Linux</span>
-                                <span class="badge text-xs px-2 py-1 rounded">Cisco</span>
+                            <p class="text-light-200 text-xs mt-3 mb-2 font-mono">Compétences clés acquises et validées
+                                durant mon cursus :</p>
+                            <div class="flex flex-wrap gap-2 justify-end">
+                                <img src="https://img.shields.io/badge/Windows_Server-10b981?style=flat-square&logo=windows&logoColor=white"
+                                    alt="Windows Server">
+                                <img src="https://img.shields.io/badge/Linux-10b981?style=flat-square&logo=linux&logoColor=white"
+                                    alt="Linux">
+                                <a href="#" class="hover:opacity-80 transition-opacity">
+                                    <img src="https://img.shields.io/badge/Cisco-10b981?style=flat-square&logo=cisco&logoColor=white"
+                                        alt="Cisco">
+                                </a>
                             </div>
                         </div>
                         <!-- Icon -->
