Finalisation : Photo profil et badges Shields.io (XLS, Sully, Fulbert)

--- a/index.html
+++ b/index.html
@@ -588,14 +588,16 @@
                             <p class="text-light text-sm mt-1 mb-1 font-bold">Le Coudray</p>
                             <p class="text-light text-sm mt-2">Développement, administration système et téléphonie.
                                 Gestion
-                                serveurs et
-                                maintenance du parc informatique.</p>
+                                serveurs et maintenance du parc informatique.</p>
+                            <p class="text-light-200 text-xs mt-3 mb-2 font-mono">Compétences techniques mobilisées :
+                            </p>
                             <div class="mt-3 flex flex-wrap gap-2">
-                                <span class="badge text-xs px-2 py-1 rounded">DEV</span>
-                                <span class="badge text-xs px-2 py-1 rounded">VOIP</span>
-                                <span class="badge text-xs px-2 py-1 rounded">3CX</span>
-                                <span class="badge text-xs px-2 py-1 rounded">Maintenance</span>
-                                <span class="badge text-xs px-2 py-1 rounded">Gestion Serveur</span>
+                                <img src="https://img.shields.io/badge/Windows_Server-10b981?style=flat-square&logo=windows&logoColor=white"
+                                    alt="Windows Server">
+                                <img src="https://img.shields.io/badge/VoIP_3CX-10b981?style=flat-square&logo=rss&logoColor=white"
+                                    alt="VoIP 3CX">
+                                <img src="https://img.shields.io/badge/Maintenance-10b981?style=flat-square&logo=wrench&logoColor=white"
+                                    alt="Maintenance">
                             </div>
                         </div>
                     </div>
@@ -607,9 +609,14 @@
                             <h3 class="text-xl font-bold text-light mt-1">BAC Pro Systèmes Numériques</h3>
                             <p class="text-emerald/60 text-sm mt-1">Lycée des Métiers Sully - Nogent-le-Rotrou</p>
                             <p class="text-light text-sm mt-2">3 années de formation technique</p>
+                            <p class="text-light-200 text-xs mt-3 mb-2 font-mono">Bases techniques acquises :</p>
                             <div class="mt-3 flex flex-wrap gap-2 justify-end">
-                                <span class="badge text-xs px-2 py-1 rounded">Électronique</span>
-                                <span class="badge text-xs px-2 py-1 rounded">Réseaux</span>
+                                <img src="https://img.shields.io/badge/Réseaux_IP-10b981?style=flat-square&logo=cisco&logoColor=white"
+                                    alt="Réseaux">
+                                <img src="https://img.shields.io/badge/Hardware-10b981?style=flat-square&logo=intel&logoColor=white"
+                                    alt="Hardware">
+                                <img src="https://img.shields.io/badge/Windows-10b981?style=flat-square&logo=windows&logoColor=white"
+                                    alt="Windows">
                             </div>
                         </div>
                         <!-- Icon -->
